--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gmach4U">
-        <activity android:name="Activities.Product"></activity>
+        <activity android:name="Activities.update_detalis_supplier"></activity>
+        <activity android:name="Activities.Product" />
         <activity android:name="Activities.SearchHistory" />
         <activity android:name="Activities.GmachStockSupplier" />
         <activity android:name="Activities.GmachCustomers" />
