--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 02 16:55:22 EET 2020
-sdk.dir=C\:\\Users\\Chen\\AppData\\Local\\Android\\Sdk
+#Mon Dec 07 15:27:49 IST 2020
+sdk.dir=C\:\\Users\\Oriya\\AppData\\Local\\Android\\Sdk
