--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 07 16:20:19 IST 2020
-sdk.dir=C\:\\Users\\Amit\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Oriya\\AppData\\Local\\Android\\Sdk
