--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gmach4u">
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gmach4U">
         <activity
+            android:name="Activities.ProductDetailsClient"
+            android:label="@string/title_activity_product_details_client"
+            android:theme="@style/Theme.Gmach4U.NoActionBar"></activity>
+        <activity
             android:name="Activities.ProductDetails"
             android:label="@string/title_activity_product_details"
-            android:theme="@style/Theme.Gmach4U.NoActionBar"></activity>
+            android:theme="@style/Theme.Gmach4U.NoActionBar" />
         <activity android:name="Activities.update_detalis_supplier" />
         <activity android:name="Activities.Product" />
         <activity android:name="Activities.SearchHistory" />
