--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name="Activities.ProductDetailsClient"
             android:label="@string/title_activity_product_details_client"
-            android:theme="@style/Theme.Gmach4U.NoActionBar"></activity>
+            android:theme="@style/Theme.Gmach4U.NoActionBar" />
         <activity
             android:name="Activities.ProductDetails"
             android:label="@string/title_activity_product_details"
