--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 07 16:20:19 IST 2020
-sdk.dir=C\:\\Users\\Oriya\\AppData\\Local\\Android\\Sdk
+#Tue Dec 29 12:01:23 IST 2020
+sdk.dir=C\:\\Users\\Yair\\AppData\\Local\\Android\\Sdk
