--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gmach4U">
         <activity
-            android:name=".UpdateDetailsClient"
+            android:name="Activities.UpdateDetailsClient"
             android:label="@string/title_activity_update_details_client"
             android:theme="@style/Theme.Gmach4U.NoActionBar"></activity>
         <activity
